# site-selection-core

./: .gitattributes  .gitignore  MOCK_DATA.md  Makefile  README.md  dagger.json  docker-compose.prod.yml
gis-server/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.prod  Makefile  README.md  alembic.ini  benchmark_master_results.csv  docker-compose.yml  main.py  package.json  pyproject.toml  pytest.ini
gis-server/config/: mlops_thresholds.json
gis-server/data/: DATA_CATALOG.md
gis-server/data/internal_knowledge/: legal_guidelines_th.json  neighborhood_facts.json  project_metadata.json
gis-server/docker/init-db/: 01-init-extensions.sql
gis-server/docker/mlflow/: Dockerfile
gis-server/docs/: api.md  baseline_model_report.html  data_dictionary.md  data_processing.md  hgt_usage_guide.md  s2_hgt_progress.md
gis-server/migrations/: env.py
gis-server/migrations/versions/: a1d8e0679b3b_add_agent_runtime_credentials_table.py  ba57660e028f_add_enterprise_auth_models_and_fields.py  (+1 more)
gis-server/notebooks/: README.md  train_hgt_tpu.ipynb
gis-server/scripts/: analyze_outliers.py  audit_legacy_realestate_listings.py  audit_listing_images_quality.py  bootstrap_production.py  build_combined_grouped_split.py  build_combined_price_dataset.py  build_combined_time_split.py  build_h3_features.py  build_hetero_graph.py  build_listing_image_embeddings.py  build_listing_only_dataset.py  build_poi_tiers.py  build_subset_graph.py  check_agent_quality_gate.py  compare_preds.py  compute_enhanced_features.py  create_chat_tables.py  create_spatial_indexes.py  create_user_properties_table.py  create_views.py  evaluate_agent_orchestration_quality.py  evaluate_hgt.py  export_experiment_leaderboard.py  extract_listing_image_embeddings.py  generate_grid.py  init_db.py  init_vector_db.py  load_data.py  load_demographics.py  precompute_distances.py  pretrain_graphmae.py  promote_model.py  run_hgt_pipeline.py  seed_knowledge_base.py  seed_sites.py  test_compare_api.py  test_endpoints.py  test_s2hgt_model.py  train_baseline.py  train_baseline_mlflow.py  (+6 more)
gis-server/scripts/etl/: load_all.py  (+11 more)
gis-server/tests/: conftest.py
(+333 files in other folders)
