[project]
name = "gis-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.3",
    "geopandas>=0.14.4",
    "GeoAlchemy2>=0.14.5",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.12.0",
    "httpx>=0.28.1",
    "osmnx>=2.0.6",
    "networkx>=3.5",
    "shapely>=2.1.2",
    "scikit-learn>=1.7.2",
    "h3>=4.0.0",
]
