[project]
name = "realestate-api"
version = "0.1.0"
description = "Real Estate Information Platform with Price Prediction AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.3",
    "geopandas>=0.14.4",
    "GeoAlchemy2>=0.14.5",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.12.0",
    "httpx>=0.28.1",
    "osmnx>=2.0.6",
    "networkx>=3.5",
    "shapely>=2.1.2",
    "scikit-learn>=1.7.2",
    "h3>=4.0.0",
    "pyarrow>=22.0.0",
    "shap>=0.46.0",
    "pandas>=2.2.0",
    "joblib>=1.4.0",
    # Deep Learning / GNN dependencies
    "torch>=2.0.0",
    "torch-geometric>=2.4.0",
    # torch-sparse and torch-scatter are optional - PyG has native fallbacks
    # "torch-sparse>=0.6.18",
    # "torch-scatter>=2.1.2",
    "gensim>=4.3.0", # For Hex2Vec Skip-gram
    # LangGraph Agent dependencies
    "langgraph>=1.0.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-postgres>=0.0.12",
    "pgvector>=0.3.0",
    "lightgbm>=4.6.0",
    "osmium>=4.2.0",
    # MLflow for experiment tracking
    "mlflow>=2.10.0",
    # Authentication
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]
etl = [
    "pyrosm>=0.6.2",
]

[tool.uv]
# torch-scatter/torch-sparse need torch as build dependency
# Commenting out since PyG 2.4+ doesn't require them for HGTConv
# extra-build-dependencies = { torch-scatter = ["torch"], torch-sparse = ["torch"] }
